fix: remove hint

--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
             </button>
         </div>
 
-        <div class="hint">
+        <!-- <div class="hint">
             小提示：你可以直接把 Kindle 导出的 TXT 文件拖拽到上面的文本框，或者粘贴原始文本，然后点击下面的「清理」。
-        </div>
+        </div> -->
     </div>
 
     <script>
